[gd_scene load_steps=7 format=3 uid="uid://dx1okvfblqpxj"]

[ext_resource type="Script" path="res://UI/UI.gd" id="1_oal40"]
[ext_resource type="Texture2D" uid="uid://btws7tvl74uoe" path="res://assets/soul container.png" id="2_pc30h"]
[ext_resource type="Texture2D" uid="uid://iw2b08yfp8dh" path="res://assets/soul siphon.png" id="3_0vbtu"]
[ext_resource type="Texture2D" uid="uid://bfot4op4e0xca" path="res://assets/Filler graphics/whiteshader.png" id="4_pfv82"]
[ext_resource type="Texture2D" uid="uid://cqqq2k0idqa8n" path="res://assets/Raise.png" id="5_737yh"]
[ext_resource type="Texture2D" uid="uid://lp4yp2a65ke4" path="res://assets/Explode.png" id="6_vliyk"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oal40")

[node name="Spellpanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -480.0
offset_top = -70.0
offset_right = 480.0
grow_horizontal = 2
grow_vertical = 0

[node name="Infohbox" type="HBoxContainer" parent="Spellpanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -66.0
offset_right = -1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0

[node name="Soulicon" type="TextureButton" parent="Spellpanel/Infohbox"]
layout_mode = 2
tooltip_text = "Souls of the dead"
texture_normal = ExtResource("2_pc30h")

[node name="Soullabel" type="Label" parent="Spellpanel/Infohbox"]
layout_mode = 2
text = "1
"

[node name="Soulstealbutton" type="TextureButton" parent="Spellpanel/Infohbox"]
layout_mode = 2
texture_normal = ExtResource("3_0vbtu")

[node name="CooldownShade" type="TextureProgressBar" parent="Spellpanel/Infohbox/Soulstealbutton"]
layout_mode = 0
offset_right = 31.0
offset_bottom = 31.0
tooltip_text = "Steal the soul of a freshly fallen body"
max_value = 4.0
value = 3.0
fill_mode = 5
texture_under = ExtResource("4_pfv82")
texture_progress = ExtResource("4_pfv82")
tint_under = Color(0.231373, 0.231373, 0.231373, 0)
tint_progress = Color(0.231373, 0.231373, 0.231373, 0.588235)

[node name="SoulstealCooldown" type="Timer" parent="Spellpanel/Infohbox/Soulstealbutton"]
one_shot = true

[node name="Raisebutton" type="TextureButton" parent="Spellpanel/Infohbox"]
layout_mode = 2
tooltip_text = "Send a captured soul into a body to animate it"
texture_normal = ExtResource("5_737yh")

[node name="CooldownShade" type="TextureProgressBar" parent="Spellpanel/Infohbox/Raisebutton"]
layout_mode = 0
offset_right = 31.0
offset_bottom = 31.0
tooltip_text = "Steal the soul of a freshly fallen body"
max_value = 4.0
value = 3.0
fill_mode = 5
texture_under = ExtResource("4_pfv82")
texture_progress = ExtResource("4_pfv82")
tint_under = Color(1, 1, 1, 0)
tint_progress = Color(0.231373, 0.231373, 0.231373, 0.588235)

[node name="RaiseCooldown" type="Timer" parent="Spellpanel/Infohbox/Raisebutton"]
wait_time = 6.0
one_shot = true

[node name="Explodebutton" type="TextureButton" parent="Spellpanel/Infohbox"]
layout_mode = 2
tooltip_text = "Fill a dead body with so many souls it explodes!"
texture_normal = ExtResource("6_vliyk")

[node name="CooldownShade" type="TextureProgressBar" parent="Spellpanel/Infohbox/Explodebutton"]
layout_mode = 0
offset_right = 31.0
offset_bottom = 31.0
tooltip_text = "Steal the soul of a freshly fallen body"
max_value = 4.0
value = 3.0
fill_mode = 5
texture_under = ExtResource("4_pfv82")
texture_progress = ExtResource("4_pfv82")
tint_under = Color(0.231373, 0.231373, 0.231373, 0)
tint_progress = Color(0.231373, 0.231373, 0.231373, 0.588235)

[node name="ExplodeCooldown" type="Timer" parent="Spellpanel/Infohbox/Explodebutton"]
wait_time = 10.0
one_shot = true

[connection signal="pressed" from="Spellpanel/Infohbox/Soulstealbutton" to="." method="_on_soulstealbutton_pressed"]
[connection signal="timeout" from="Spellpanel/Infohbox/Soulstealbutton/SoulstealCooldown" to="." method="_on_soulsteal_cooldown_timeout"]
[connection signal="pressed" from="Spellpanel/Infohbox/Raisebutton" to="." method="_on_raisebutton_pressed"]
[connection signal="pressed" from="Spellpanel/Infohbox/Explodebutton" to="." method="_on_explodebutton_pressed"]
[connection signal="timeout" from="Spellpanel/Infohbox/Explodebutton/ExplodeCooldown" to="." method="_on_explode_cooldown_timeout"]
